// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: checked 1`] = `
<Tooltip
  overlay="homepage.current"
>
  <ButtonLink
    aria-label="homepage.current"
    className="link-no-underline set-homepage-link"
    onClick={[Function]}
  >
    <HomeIcon
      filled={true}
    />
  </ButtonLink>
</Tooltip>
`;

exports[`should render correctly: checked, and on default 1`] = `
<Tooltip
  overlay="homepage.current.is_default"
>
  <span
    aria-label="homepage.current.is_default"
    className="display-inline-block"
  >
    <HomeIcon
      filled={true}
    />
  </span>
</Tooltip>
`;

exports[`should render correctly: unchecked 1`] = `
<Tooltip
  overlay="homepage.check"
>
  <ButtonLink
    aria-label="homepage.check"
    className="link-no-underline set-homepage-link"
    onClick={[Function]}
  >
    <HomeIcon
      filled={false}
    />
  </ButtonLink>
</Tooltip>
`;
